# py-shinylive

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.github/workflows/: build.yml
shinylive/: __init__.py  _app_json.py  _assets.py  _deps.py  _export.py  _main.py  _url.py  _utils.py  _version.py
shinylive/_version/: __init__.py
tests/: test_assets.py  test_deps.py  test_url.py
