[metadata]
name = shinylive
version = attr: shinylive._version.SHINYLIVE_PACKAGE_VERSION
author = Winston Chang
author_email = winston@posit.co
url = https://github.com/posit-dev/py-shinylive
description = Run Shiny applications running Python in the browser.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/posit-dev/py-shinylive/issues
    Documentation = https://github.com/posit-dev/py-shinylive
    Source Code = https://github.com/posit-dev/py-shinylive



[options]
python_requires = >=3.8
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    shiny
    click>=8.1.7
    appdirs>=1.4.4
    lzstring>=1.0.4
    typing-extensions>=4.0.1
    setuptools; python_version>='3.12'
    chevron>=0.14.0
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
test =
    pytest>=6.2.4
dev =
    black>=22.3.0
    flake8>=3.9.2
    flake8-bugbear>=22.6.22
    isort>=5.11.2
    pyright>=1.1.284
    wheel

[options.packages.find]
include = shinylive, shinylive.*

[options.package_data]
shinylive = py.typed

[options.entry_points]
console_scripts =
    shinylive = shinylive._main:main


[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# E704: Multiple statements on one line (def)
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
ignore = E302, E501, E704, F403, F405, W503
exclude = docs, .venv, _dev

[isort]
profile=black
